# PrisonatorYoni

./: README.md
board_v7/stage_7_esp4.4.1/: CMakeLists.txt  custom_partition.csv  sdkconfig  sdkconfig.old  version_control.txt
board_v7/stage_7_esp4.4.1/components/AHRS/: CMakeLists.txt  rtGetInf.c  rtGetInf.h  rtGetNaN.c  (+11 more)
board_v7/stage_7_esp4.4.1/main/: CMakeLists.txt  main.c
board_v8/stage_8_esp4.4.1/: CMakeLists.txt  custom_partition.csv  sdkconfig  sdkconfig.old  version_control.txt
board_v8/stage_8_esp4.4.1/components/hardware/: CMakeLists.txt  HA_pulse_sync.c  HA_pulse_sync.h  battery.c  battery.h  bmi088.c  bmi088.h  bt_spp.c  calibration.c  calibration.h  connection_mode.c  connection_mode.h  gpio_decoder.c  gpio_decoder.h  i2c_xfer.c  i2c_xfer.h  icm42688.h  led.c  led.h  manager.c  manager.h  mmc5983ma.c  mmc5983ma.h  ms5611.c  packet_loss.c  packet_loss.h  power.c  power.h  prisonator_external_flash.c  prisonator_external_flash.h  resend_packet_method.c  resend_packet_method.h  spi_xfer.c  spi_xfer.h  sw_defs.h  uart.c  uart.h
board_v8/stage_8_esp4.4.1/main/: main.c
board_v9/stage_9_esp4.4.1/: .gitignore  CMakeLists.txt  Makefile  custom_partition.csv  sdkconfig  sdkconfig.old  version_control.txt
board_v9/stage_9_esp4.4.1/main/: main.c
impostor_and_board_record_plus/: prisonator_app_impostor_cable_power_up_send_calibration_data.py  prisonator_app_impostor_cable_power_up_to_nav_with_aes.py  prisonator_app_impostor_plus_idle_optional_current_avg_aes_innocent_plus4.py  prisonator_app_impostor_plus_idle_optional_current_avg_innocent_plus3.py
(+121 files in other folders)
